# dimr-kuka

./: .gitignore  CMakeLists.txt  README.md  package.xml
Config_RSI_KRC4/: ros_rsi.rsi.xml
Docs/0 - Setup KUKA KR6 R900/: 0 - Setup KUKA KR6 R900.md  readme.md
config/: dimr.yaml  kinematics.yaml  kuka_kr6r900sixx.srdf  params_eki.yaml  params_rsi.yaml
config_KRC4/EKI/: EkiHwInterface.xml
config_KRC4/RSI/: ros_rsi_ethernet.xml
launch/: dimr_kuka.launch  moveit_rviz_planning_execution.launch  test_EKI.launch  test_RSI.launch  test_custom_joy_teleop.launch  test_hardware_interface.launch  test_joy_bridge_dimr.launch  test_moveit_rviz_planning_execution.launch
launch/moveit/: kuka_kr6r900sixx_moveit_controller_manager.launch.xml  kuka_kr6r900sixx_moveit_sensor_manager.launch.xml  move_group.launch.xml  moveit.rviz  moveit_rviz.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch.xml  planning_pipeline.launch.xml  sensor_manager.launch.xml  trajectory_execution.launch.xml
msg/: DimrControl.msg
scripts/: custom_joy_moveit.py  demo_trajectoire.py  test_joy_bridge.py  test_service_client.py  test_service_serveur.py  test_topic_client.py  test_topic_serveur.py
scripts_dev/: custom_joy_moveit.py  demo_trajectoire.py
src/: brick.py  feeder.py  layer.py  main.py  main_ihm.py  main_kuka.py  main_robot.py  runner.py  sawyer.py  test_ihm.py  wall.py
src/App/: ihm.py  joystick.py  kuka.py  robot.py
src/Debug/: test.py
src/Domain/: brick.py  feeder.py  layer.py  wall.py
srv/: SendToolTo.srv
