<?xml version="1.0"?>
<package format="2">
  <name>dimr-kuka</name>
  <version>0.0.1</version>
  <description>The dimr-kuka package</description>

  <maintainer email="earricau@ensc.fr">Estelle Arricau</maintainer>
  <maintainer email="chauvel.alban@gmail.com">Alban Chauvel</maintainer>
  <maintainer email="llerandy@ensc.fr">Laetitia Lerandy</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/Copper-Bot/dimr-kuka</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
